# adp-hackathon-tnt-etl

./: .env.example  .gitignore  .sqlfluff  README.md  pyproject.toml  requirements.txt
pokemon_etl/: assets.py  definitions.py
pokemon_etl/dagster/: assets.py  dbt_project.py  definitions.py  jobs.py  schedules.py
pokemon_etl/dagster/resources/: snowflake_resource.py
pokemon_etl/dbt/: .user.yml  dbt_project.yml  profiles.yml
pokemon_etl/dbt/models/: groups.yml
pokemon_etl/dbt/models/mart/: DBT_POKEMON_PROCESSED.sql
pokemon_etl/dbt/models/raw/: schema.yml  sources.yml
pokemon_etl/dbt/models/staging/: DBT_POKEMON_BASE.sql  DBT_POKEMON_BATTLE.sql  DBT_POKEMON_REPRO.sql  sources.yml
