[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.10.11",
    "dagster-snowflake>=0.26.11",
    "dagster-webserver>=1.10.11",
    "httpx>=0.28.1",
    "polars>=1.27.1",
    "pyarrow>=18.1.0",
    "ruff>=0.11.6",
    "snowflake-connector-python[pandas,secure-local-storage]>=3.14.1"
]

[tool.dagster]
module_name = "pokemon_etl.definitions"
code_location_name = "pokemon_etl"
