[project]
name = "hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.10.11",
    "dagster-dbt>=0.26.11",
    "dagster-polars>=0.27.1",
    "dagster-snowflake>=0.26.11",
    "dagster-webserver>=1.10.11",
    "dbt-core>=1.9.4",
    "dbt-snowflake>=1.9.2",
    "httpx>=0.28.1",
    "patito>=0.8.3",
    "polars>=1.27.1",
    "pyarrow>=18.1.0",
    "ruff>=0.11.6",
    "snowflake-connector-python[pandas,secure-local-storage]>=3.14.1",
    "sqlfluff>=3.4.0",
]

[tool.dagster]
module_name = "pokemon_etl.dagster.definitions"
code_location_name = "pokemon_etl"
